--- a/style.css
+++ b/style.css
@@ -227,6 +227,9 @@ p{
         height: 90vh;
         width: 55vw;
     }
+    .button{
+        margin-bottom: 10px;
+    }
     .infoContainer .devpic img {
         width: 39%;
         height: 42%;
